# pre-commit-test

./: .pre-commit-config.yaml  pyproject.toml  test_ci.py
.github/workflows/: blank.yml
src/pre_commit_test/: test_ci.py
