[project]
name = "pre-commit-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Tabatha Wiggers",email = "tatchiwiggers@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "pre_commit_test", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
